--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -7,3 +7,10 @@
   font-size: 40;
   color: '#010101'; */
 }
+
+.Loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+}
